Config file changes.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+url: https://infosecsapper.com
 name: The Infosec Sapper
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
+excerpt_separator: <!-- More -->
