Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ name: The Infosec Sapper
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 excerpt_separator: <!-- More -->
+
+theme: jekyll-theme-minimal
