Added variables to theme config.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 url: https://infosecsapper.com
 name: The Infosec Sapper
+title: infosecsapper.com
+description: Home of the Infosec Sapper
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 excerpt_separator: <!-- More -->
