--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: https://infosecsapper.com
+name: InfosecSapper.com
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 excerpt_separator: <!-- More -->
