Attempting to fix dir structure to incorporate static and dynamic pages.

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 
 theme: jekyll-theme-minimal
+collections:
+  guides:
+    output: true
+    permalink: /:collection/:title
