--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,18 @@
 name: InfosecSapper.com
+title: The InfosecSapper's Blog
+description: A blog covering a variety of IT and information security topics.
+url: "https://infosecsapper.com"
+baseurl: ""
+author: InfosecSapper
+twitter:
+  username: infosecsapper
+  card: summary
+social:
+  links:
+    - https://twitter.com/InfosecSapper
+    - https://github.com/InfosecSapper
+    - https://keybase.io/thesapper
+
 markdown: kramdown
 kramdown:
   input: GFM
@@ -9,3 +23,4 @@ permalink: /blog/:year/:month/:day/:title
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+  - jekyll-seo-tag
