--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,6 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
 # If you need help with YAML syntax, here are some quick references for you: 
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 
 title: InfosecSapper.com
 tagline: InfosecSapper's blog and guides
@@ -33,12 +17,21 @@ social:
     - https://github.com/infosecsapper
     - https://keybase.io/thesapper
     - https://www.reddit.com/user/InfosecSapper
-defaults:
-  scope:
-    path: ""
-  values:
-    image: /assets/images/default.jpg
 
+defaults:
+  - scope:
+      path: ""
+    values:
+      image: /assets/images/default.jpg
+  - scope:
+      type: posts
+    values:
+      layout: post
+
+paginate: 5
+paginate_path: "/:num/"
+
+permalink: /:categories/:title
 
 name: InfosecSapper.com
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -50,10 +43,16 @@ github_username:  infosecsapper
 
 # Build settings
 theme: jekyll-theme-midnight
+markdown: kramdown
+kramdown:
+    input: GFM
+    syntax_highlighter: rouge
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-sitemap
+
+include: [_pages]
 
 # Exclude from processing.
 # The following items will not be processed, by default.
